--- a/001.generate_tpr_sh.template
+++ b/001.generate_tpr_sh.template
@@ -25,6 +25,7 @@ $GMX_BIN grompp -f $MDP_FILE -c $GRO_FILE -p $TOP_FILE -o $TPR_FILE -po $NEW_MDP
 
 # run the PMF calculation
 mkdir -p output
-# DEFAULT_OUTPUT_FILENAME="output/$OUTPUT_BASENAME.out"
+DEFAULT_OUTPUT_FILENAME="output/$OUTPUT_BASENAME.out"
 # $GMX_BIN mdrun -ntmpi 1 -ntomp 4 -nb gpu -pme gpu -gpu_id 0 -s $TPR_FILE -deffnm $DEFAULT_OUTPUT_FILENAME -colvars colvar.dat
- 
+echo "You can now run gromacs by the following example:"
+echo "$GMX_BIN mdrun -ntmpi 1 -ntomp 4 -nb gpu -pme gpu -gpu_id 0 -s $TPR_FILE -deffnm $DEFAULT_OUTPUT_FILENAME -colvars $COLVARS_INPUT_TEMPLATE"
