WIP: add step 003.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 p41-abl.new.gro
 001_RMSD_bound
 002_euler_theta
+003_euler_phi
+004_euler_psi
+005_polar_theta
+006_polar_phi
+007_r
+008_RMSD_unbound
+
