--- a/006.colvars.template
+++ b/006.colvars.template
@@ -64,13 +64,7 @@ colvar {
 }
 
 colvar {
-    name                    polarTheta
-    width                   $polarTheta_width
-    lowerboundary           $polarTheta_lower_boundary
-    upperboundary           $polarTheta_upper_boundary
-    subtractAppliedForce    on
-    extendedLagrangian      on
-    extendedFluctuation     $polarTheta_width
+    name polarTheta
     polarTheta {
         atoms {
             indexGroup      $ligand_selection
@@ -84,23 +78,44 @@ colvar {
     }
 }
 
+colvar {
+    name                    polarPhi
+    width                   $polarPhi_width
+    lowerboundary           $polarPhi_lower_boundary
+    upperboundary           $polarPhi_upper_boundary
+    subtractAppliedForce    on
+    extendedLagrangian      on
+    extendedFluctuation     $polarPhi_width
+    polarPhi {
+        atoms {
+            indexGroup      $ligand_selection
+            centerReference on
+            rotateReference on
+            fittingGroup {
+                indexGroup $protein_selection
+            }
+            refPositionsFile  ./protein.pdb
+        }
+    }
+}
+
 harmonicWalls {
-    colvars             polarTheta
-    lowerWalls          $polarTheta_lower_boundary
-    upperWalls          $polarTheta_upper_boundary
-    lowerWallConstant   $polarTheta_wall_constant
-    upperWallConstant   $polarTheta_wall_constant
+    colvars             polarPhi
+    lowerWalls          $polarPhi_lower_boundary
+    upperWalls          $polarPhi_upper_boundary
+    lowerWallConstant   $polarPhi_wall_constant
+    upperWallConstant   $polarPhi_wall_constant
 }
 
 abf {
-    colvars             polarTheta
+    colvars             polarPhi
     FullSamples         10000
     historyfreq         50000
     writeCZARwindowFile
 }
 
 metadynamics {
-    colvars             polarTheta
+    colvars             polarPhi
     hillWidth           3.0
     hillWeight          0.2092
     wellTempered        on
@@ -108,9 +123,15 @@ metadynamics {
 }
 
 harmonic {
-   colvars              eulerPsi
-   forceConstant        0.4184
-   centers              004_pmf_argmin
+    colvars             polarTheta
+    forceConstant       0.4184
+    centers             005_pmf_argmin
+}
+
+harmonic {
+    colvars             eulerPsi
+    forceConstant       0.4184
+    centers             004_pmf_argmin
 }
 
 harmonic {
