--- a/007.colvars.template
+++ b/007.colvars.template
@@ -80,46 +80,65 @@ colvar {
 
 colvar {
     name                    polarPhi
-    width                   $polarPhi_width
-    lowerboundary           $polarPhi_lower_boundary
-    upperboundary           $polarPhi_upper_boundary
-    subtractAppliedForce    on
-    extendedLagrangian      on
-    extendedFluctuation     $polarPhi_width
     polarPhi {
         atoms {
             indexGroup      $ligand_selection
             centerReference on
             rotateReference on
             fittingGroup {
-                indexGroup $protein_selection
+                indexGroup  $protein_selection
             }
             refPositionsFile reference.xyz
         }
     }
 }
 
+colvar {
+    name                    r
+    width                   $r_width
+    lowerboundary           $r_lower_boundary
+    upperboundary           $r_upper_boundary
+    subtractAppliedForce    on
+    extendedLagrangian      on
+    extendedFluctuation     $r_width
+    distance {
+        forceNoPBC          yes
+        group1 { 
+            indexGroup      $protein_selection
+        }
+        group2 {
+            indexGroup      $ligand_selection
+        }
+    }
+}
+
 harmonicWalls {
-    colvars             polarPhi
-    lowerWalls          $polarPhi_lower_boundary
-    upperWalls          $polarPhi_upper_boundary
-    lowerWallConstant   $polarPhi_wall_constant
-    upperWallConstant   $polarPhi_wall_constant
+    colvars             r
+    lowerWalls          $r_lower_boundary
+    upperWalls          $r_upper_boundary
+    lowerWallConstant   $r_wall_constant
+    upperWallConstant   $r_wall_constant
 }
 
 abf {
-    colvars             polarPhi
+    colvars             r
     FullSamples         10000
     historyfreq         50000
     writeCZARwindowFile
 }
 
 metadynamics {
-    colvars             polarPhi
+    colvars             r
     hillWidth           3.0
     hillWeight          0.2092
     wellTempered        on
     biasTemperature     4000
+}
+
+harmonic {
+    colvars             polarPhi
+    forceConstant       0.4184
+    centers             006_pmf_argmin
 }
 
 harmonic {
