Finish the documentation.

--- a/002.colvars.template
+++ b/002.colvars.template
@@ -62,7 +62,7 @@ metadynamics {
 harmonic {
     colvars         RMSD
     forceConstant   41.84
-    centers         001_pmf_argmin
+    centers         0
 }
 
 colvar {
