--- a/005.colvars.template
+++ b/005.colvars.template
@@ -128,7 +128,7 @@ harmonic {
 harmonic {
     colvars             RMSD
     forceConstant       41.84
-    centers             001_pmf_argmin
+    centers             0
 }
 
 colvar {
