--- a/003.colvars.template
+++ b/003.colvars.template
@@ -85,7 +85,7 @@ harmonic {
 harmonic {
    colvars          RMSD
    forceConstant    41.84
-   centers          001_pmf_argmin
+   centers          0
 }
 
 colvar {
