--- a/007.colvars.template
+++ b/007.colvars.template
@@ -168,7 +168,7 @@ harmonic {
 harmonic {
     colvars             RMSD
     forceConstant       41.84
-    centers             001_pmf_argmin
+    centers             0
 }
 
 colvar {
