--- a/004.mdp.template
+++ b/004.mdp.template
@@ -53,7 +53,7 @@ implicit-solvent    = no
 
 ;Pressure coupling
 ;Pressure coupling
-pcoupl              = berendsen
+pcoupl              = Parrinello-Rahman
 pcoupltype          = Isotropic
 nstpcouple          = -1
 tau-p               = 2
